Synchronous operation of ScriptProcessorNode on OfflineAudioContext

ScriptProcessorNode operates in an asynchronous fashion and this makes
impossible for this node to work in OfflineAudioContext.

The OfflineAudioContext renders a buffer as fast as it can, so it does
not give enough time for the script processing in the main thread to
finish properly.

This CL adds the synchronization with WaitableEvent between
the OfflineAudioContext's rendering thread and the main JS thread.
This does not change any behavior of the realtime audio context.

FYI, WebKit bug: https://bugs.webkit.org/show_bug.cgi?id=113274

BUG=374339
TEST=LayoutTests/webaudio/scriptprocessor-offlineaudiocontext.html

Review-Url: https://codereview.chromium.org/2261583002
Cr-Commit-Position: refs/heads/master@{#413606}

Former-commit-id: 2336e1ce03d5335b0150f568b05bbfb8252a1027